<resources>
    <string name="app_name">Yoo-Hoo</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hi_shlomo">Yoo-Hoo</string>
    <string name="notif_channel_name">amplez_channel_hishlomo</string>
    <string name="notif_channel_desc">Yoo-Hoo notifs</string>
    <string name="notification_title_active">Yoo-Hoo is running smoothly</string>
    <string name="notification_big_text_active">You chill while I filter the peasants for you</string>
    <string name="notification_title_inactive">Yoo-Hoo not running - check your internet</string>
    <string name="notification_big_text_inactive">Yoo-Hoo needs internet to function properly</string>
    <string name="yoo_hoo_service_killed">Yoo-Hoo is turned off</string>
    <string name="yoo_hoo_service_started">Yoo-Hoo is turned on</string>
    <string name="yoo_hoo">Yoo-Hoo</string>
    <string translatable="false" name="comma_separated_activate_phrases">yoo-hoo,woohoo,hugh who,you who,yahoo,yo-yo,yoohoo,you</string>
    <string translatable="false" name="comma_separated_activate_phrases_display">yoo-hoo,woohoo,hugh who, you\nyou who, yahoo, yo-yo, yoohoo</string>

    <string translatable="false" name="comma_separated_deactivate_phrases">play,play music,resume,shikaka</string>
    <string translatable="false" name="comma_separated_deactivate_display">play, play music, resume, shikaka</string>

    <string name="validate_activate_deactivate_keywords_error">You can only use a-z</string>
    <string name="heard_phrase_title">Here is what I hear:</string>
    <string name="heard_text_hint">Turn Yoo-Hoo on and try saying somethin\'</string>
    <string name="cant_start_service_yet">Please wait a few seconds before starting YooHoo again</string>
</resources>
