<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Switch
            android:scaleX="2"
            android:scaleY="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/switch1"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:text="@string/hi_shlomo"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.03"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.67"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.97"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3" app:layout_constraintGuide_percent="0.2"/>


    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/activationET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/comma_separated_activate_phrases_display"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:layout_constraintVertical_chainStyle="packed"
            app:met_floatingLabelText="Activation phrases (comma separated)"
            app:met_maxCharacters="150"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/deactivationET" app:layout_constraintVertical_bias="0.0"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/deactivationET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/comma_separated_deactivate_display"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:layout_constraintVertical_chainStyle="packed"
            app:met_floatingLabelText="Deactivation phrases (comma separated)"
            app:met_maxCharacters="150"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/activationET"
            app:layout_constraintBottom_toTopOf="@+id/textView"/>
    <TextView
            android:text="@string/heard_phrase_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/deactivationET"
            app:layout_constraintBottom_toTopOf="@+id/phraseTS"/>
    <TextSwitcher
            android:id="@+id/phraseTS"

            android:layout_width="0dp"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.5">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/heard_text_hint"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"/>
    </TextSwitcher>
</android.support.constraint.ConstraintLayout>
